--- a/frontend/src/assets/base.css
+++ b/frontend/src/assets/base.css
@@ -1,6 +1,13 @@
 :root {
     --color-background: #FFFFFF;
+    --color-fill: #F7F9F6;
+    --color-fill-dark: #E7EEE7;
+    --color-border: #CCCCCC;
 
+    --color-accent: #599862;
+
+    --color-text: #393939;
+    --color-text-header: #000000;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -16,8 +23,24 @@ body {
     transition:
         color 0.5s,
         background-color 0.5s;
-    /* Font family: */
+    /* Font family: TODO */
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    list-style: none;
+}
+
+* {
+    color: var(--color-text);
+    padding: 0;
+    margin: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    color: var(--color-text-header);
 }
