Sign Out Logic #8 & Nav Responsiveness
Using Pinia for state managment. Refresh all you want, state won't be lost. This removes the need for the emit/props hell I started entering.

--- a/frontend/src/assets/base.css
+++ b/frontend/src/assets/base.css
@@ -22,9 +22,9 @@
     --border-radius-high: 25px;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
     :root {}
-}
+} */
 
 /* HTML */
 body {
