--- a/frontend/src/assets/base.css
+++ b/frontend/src/assets/base.css
@@ -17,9 +17,9 @@
     --color-text-header: #111111;
 
     /* Border Radii */
-    --border-radius-low: 10px;
-    --border-radius-mid: 15px;
-    --border-radius-high: 25px;
+    --border-radius-low: 5px;
+    --border-radius-mid: 10px;
+    --border-radius-high: 20px;
 }
 
 /* @media (prefers-color-scheme: dark) {
@@ -67,6 +67,10 @@ button {
     font-weight: 500;
 }
 
+span {
+    display: block;
+}
+
 input,
 p,
 a,
@@ -98,9 +102,31 @@ a {
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
 }
 
+.flex {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
 .splitter {
-    margin: 2px 0;
     width: 100%;
     height: 2px;
     background-color: var(--color-border);
+}
+
+/* Color Classes */
+.color-info {
+    color: var(--color-info);
+}
+
+.color-success {
+    color: var(--color-success);
+}
+
+.color-warning {
+    color: var(--color-warning);
+}
+
+.color-danger {
+    color: var(--color-danger);
 }
