--- a/frontend/src/assets/base.css
+++ b/frontend/src/assets/base.css
@@ -127,6 +127,13 @@ a {
     text-overflow: ellipsis;
 }
 
+.click-item {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 1;
+}
+
 /* Color Classes */
 .color-info {
     color: var(--color-info);
