--- a/frontend/src/assets/base.css
+++ b/frontend/src/assets/base.css
@@ -4,7 +4,8 @@
     --color-background: #FFFFFF;
     --color-fill: #F7F9F6;
     --color-fill-dark: #E7EEE7;
-    --color-border: #f2f2f2;
+    --color-border: #F2F2F2;
+    --color-border-dark: #DEDEDE;
 
     /* Informational */
     --color-info: #A1CCD1;
@@ -89,8 +90,14 @@ button {
 }
 
 a,
-button {
+button,
+input[type=checkbox] {
     cursor: pointer;
+}
+
+input[type=checkbox] {
+    width: 15px;
+    height: 15px;
 }
 
 a {
@@ -103,7 +110,7 @@ h1 {
 
 /* Custom Classes */
 .bold {
-    font-weight: 500;
+    font-weight: 600;
 }
 
 .align-right {
@@ -208,4 +215,110 @@ h1 {
     margin-bottom: -5px;
     transform: rotate(45deg);
     background-color: var(--color-fill-dark);
+}
+
+/* Tables */
+table {
+    border-spacing: 0;
+    width: 100%;
+}
+
+thead,
+.table-footer {
+    height: 60px;
+}
+
+th,
+td {
+    text-align: left;
+    box-sizing: border-box;
+    padding: 10px;
+    border: 1px solid var(--color-fill);
+}
+
+td {
+    height: 50px;
+}
+
+th {
+    background-color: var(--color-fill);
+    cursor: pointer;
+    user-select: none;
+}
+
+.table-header-item {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.table-header-item i {
+    opacity: 0;
+}
+
+th:hover > div > i {
+    opacity: 1;
+}
+
+.top-left-header {
+    border-top-left-radius: var(--border-radius-mid);
+}
+
+.top-right-header {
+    border-top-right-radius: var(--border-radius-mid);
+}
+
+.left-data {
+    border-left: 2px solid var(--color-fill);
+    width: 40px;
+}
+
+.right-data {
+    border-right: 2px solid var(--color-fill);
+}
+
+.table-data-row {
+    cursor: pointer;
+}
+
+.table-data-row:hover > * {
+    background-color: var(--color-fill-dark);
+}
+
+.table-footer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    background-color: var(--color-fill);
+    border-bottom-left-radius: var(--border-radius-mid);
+    border-bottom-right-radius: var(--border-radius-mid);
+    box-sizing: border-box;
+    padding: 10px;
+}
+
+.pagination-container {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+.pagination-button {
+    height: 30px;
+    width: 30px;
+    border: 1px solid var(--color-border-dark);
+    border-radius: 50%;
+}
+
+.pagination-button:hover,
+.active-pagination-button {
+    background-color: var(--color-fill-dark);
+}
+
+.next-pagination-button {
+    margin-left: 10px;
+}
+
+.previous-pagination-button {
+    margin-right: 10px;
 }
