--- a/frontend/app/assets/main.css
+++ b/frontend/app/assets/main.css
@@ -108,7 +108,10 @@ input[type=checkbox] {
     height: 15px;
 }
 
-a {
+a,
+.no-select {
+    -webkit-user-select: none;
+    -moz-user-select: none;
     user-select: none;
 }
 
@@ -117,14 +120,6 @@ h1 {
 }
 
 /* Custom Classes */
-.bold {
-    font-weight: 600;
-}
-
-.align-right {
-    margin-left: auto;
-}
-
 .content-view {
     box-sizing: border-box;
     padding: 20px 30px 30px;
@@ -150,49 +145,25 @@ h1 {
     gap: 5px;
 }
 
-.no-select {
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    user-select: none;
+.overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: var(--color-background);
+    opacity: 0.3;
+    z-index: 2;
+    cursor: pointer;
 }
 
-.pill {
-    height: 40px;
-    box-sizing: border-box;
-    padding: 10px;
-    border-radius: var(--border-radius-high);
-    border: 1px solid var(--color-border);
-    display: flex;
-    align-items: center;
-}
-
-.splitter {
+.page-splitter {
     width: 100%;
     height: 2px;
     background-color: var(--color-border);
 }
 
-.relative-center {
-    left: 0;
-    right: 0;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.ellipsis {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-
-.click-item {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    z-index: 1;
-}
-
-.page-splitter {
+.splitter {
     width: 100%;
     height: 2px;
     background-color: var(--color-border);
@@ -213,139 +184,4 @@ h1 {
 
 .color-danger {
     color: var(--color-danger);
-}
-
-/* Tooltips */
-.tooltip-item {
-    display: none;
-    flex-direction: column;
-    align-items: center;
-    position: absolute;
-    z-index: 1;
-    top: 50px;
-    width: fit-content;
-    width: -moz-fit-content;
-    height: fit-content;
-}
-
-.tooltip-item p {
-    background-color: var(--color-fill-dark);
-    z-index: 2;
-    box-sizing: border-box;
-    padding: 5px 10px;
-    border-radius: var(--border-radius-high);
-}
-
-.tooltip-arrow {
-    height: 10px;
-    width: 10px;
-    margin-bottom: -5px;
-    transform: rotate(45deg);
-    background-color: var(--color-fill-dark);
-}
-
-/* Tables */
-table {
-    border-spacing: 0;
-    width: 100%;
-}
-
-thead,
-.table-footer {
-    height: 60px;
-}
-
-th,
-td {
-    text-align: left;
-    box-sizing: border-box;
-    padding: 10px;
-    border: 1px solid var(--color-fill);
-}
-
-td {
-    height: 50px;
-}
-
-th {
-    background-color: var(--color-fill);
-    cursor: pointer;
-    user-select: none;
-}
-
-.table-header-item {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.table-header-item i {
-    opacity: 0;
-}
-
-th:hover > div > i {
-    opacity: 1;
-}
-
-.top-left-header {
-    border-top-left-radius: var(--border-radius-mid);
-}
-
-.top-right-header {
-    border-top-right-radius: var(--border-radius-mid);
-}
-
-.left-data {
-    border-left: 2px solid var(--color-fill);
-    width: 40px;
-}
-
-.right-data {
-    border-right: 2px solid var(--color-fill);
-}
-
-.table-data-row {
-    cursor: pointer;
-}
-
-.table-data-row:hover > * {
-    background-color: var(--color-fill-dark);
-}
-
-.table-footer {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-    background-color: var(--color-fill);
-    border-bottom-left-radius: var(--border-radius-mid);
-    border-bottom-right-radius: var(--border-radius-mid);
-    box-sizing: border-box;
-    padding: 10px;
-}
-
-.pagination-container {
-    display: flex;
-    align-items: center;
-    gap: 5px;
-}
-
-.pagination-button {
-    height: 30px;
-    width: 30px;
-    border: 1px solid var(--color-border-dark);
-    border-radius: 50%;
-}
-
-.pagination-button:hover,
-.active-pagination-button {
-    background-color: var(--color-fill-dark);
-}
-
-.next-pagination-button {
-    margin-left: 10px;
-}
-
-.previous-pagination-button {
-    margin-right: 10px;
 }
